# qirabot-python

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml  publish.yml
docs/: deploy-install-redirect.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/advanced/: ai-tasks.md  configuration.md  error-handling.md  faq.md  overlay.md  reports.md
docs/backends/: android.md  browser.md  custom-adapters.md  desktop.md  ios.md  windows-games.md
docs/frameworks/: appium.md  playwright.md  pytest.md  selenium.md
docs/guide/: agents.md  cli.md  installation.md  quickstart.md
docs/reference/: api.md  methods.md  privacy.md
docs/zh/: index.md
docs/zh/advanced/: ai-tasks.md  configuration.md  error-handling.md  faq.md  overlay.md  reports.md
docs/zh/backends/: android.md  browser.md  custom-adapters.md  desktop.md  ios.md  windows-games.md
docs/zh/frameworks/: appium.md  playwright.md  pytest.md  selenium.md
docs/zh/guide/: agents.md  cli.md  installation.md  quickstart.md
docs/zh/reference/: api.md  methods.md  privacy.md
examples/: README.md
examples/adb/: quickstart.py
examples/airtest/: README.md  adapter.py  bolt_on_template.py  quickstart.py  record_android_app.py  standalone_android_rpa.py  standalone_windows_rpa.py  test_android_app.py  test_windows_app.py
examples/appium/: README.md  mobile_rpa.py  test_android_app.py  test_android_settings.py  test_ios_settings.py
examples/automation/: 01_quickstart.py  02_multi_step_ai.py  03_scrape_data.py  04_connect_cdp.py  05_concurrent.py  06_human_in_the_loop.py  README.md
examples/desktop/: README.md  overlay_progress.py  test_browser_automation.py  test_native_app.py
examples/game/: README.md  custom_tool_gm.py  game_rules.md  ios_appium_mmorpg.py  knowledge.py  windows_unity_game.py
examples/ios/: quickstart.py
examples/playwright/: README.md  test_ecommerce.py  test_form_validation.py  test_todo_app.py
examples/runner/: README.md  runner.py  sample_job.py  trigger.sh
examples/selenium/: README.md  test_ecommerce.py  test_search_engine.py
examples/windows/: quickstart.py
plugins/qirabot/: README.md
plugins/qirabot/.claude-plugin/: plugin.json
plugins/qirabot/skills/qirabot/: SKILL.md
plugins/qirabot/skills/qirabot/references/: CLI.md  REFERENCE.md
plugins/qirabot/skills/qirabot/scripts/: preflight.py
plugins/qirabot/skills/qirabot/templates/: android.py  bolt_on.py  browser.py  ios.py  ios_airtest.py  ios_appium.py
scripts/: install.ps1  install.sh  sync_skill.py  verify_overlay_mac.py
skills/qirabot/: SKILL.md
skills/qirabot/references/: REFERENCE.md
skills/qirabot/scripts/: preflight.py
skills/qirabot/templates/: android.py  browser.py
src/qirabot/: __init__.py  _applaunch.py  _browser.py  _dotenv.py  _heartbeat.py  _knowledge.py  _optional.py  _overlay_helper.py  _tools.py  _transport.py  _userconfig.py  adb.py  bound.py  client.py  exceptions.py  overlay.py  recording.py  report.py  wda.py  windows.py
src/qirabot/adapters/: __init__.py  adb_adapter.py  airtest_adapter.py  appium_adapter.py  auto.py  base.py  playwright_adapter.py  pyautogui_adapter.py  selenium_adapter.py  wda_adapter.py  windows_adapter.py
src/qirabot/assets/: ADBKEYBOARD_LICENSE.txt  __init__.py
src/qirabot/cli/: config.py  main.py  skill.py
src/qirabot/skill-data/: SKILL.md
src/qirabot/skill-data/references/: CLI.md  REFERENCE.md
src/qirabot/skill-data/templates/: android.py  ios_wda.py
tests/: conftest.py  test_adapters.py  test_adb_adapter.py  test_applaunch.py  test_cli.py  test_cli_config.py  test_client.py  test_close_status.py  test_custom_tools.py  test_dotenv.py  test_exceptions.py  test_heartbeat.py  test_knowledge.py  test_local_steps.py  test_optional.py  test_overlay.py  test_packaging.py  test_recording.py  test_report.py  test_retry.py  test_skill.py  test_skill_install.py  test_skill_sync.py  test_thinking_level.py  test_transport.py  test_wda.py  test_wda_adapter.py  test_windows_adapter.py
