[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qirabot"
version = "2.0.7"
description = "AI vision-driven GUI automation across browsers, mobile, desktop, and games"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Qirabot Team", email = "support@qirabot.com" }
]
keywords = ["qirabot", "automation", "ai", "vision", "gui", "rpa", "cross-platform", "sdk", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "Pillow>=10.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
qirabot = "qirabot.cli.main:main"

[project.urls]
Homepage = "https://qirabot.com"
Documentation = "https://qirabot.com/docs/"
Repository = "https://github.com/qirabot/qirabot-python"
Issues = "https://github.com/qirabot/qirabot-python/issues"

[project.optional-dependencies]
browser = ["playwright>=1.40,<2.0"]
desktop = ["pyautogui>=0.9.54", "pyperclip>=1.8"]
appium = ["Appium-Python-Client>=4.0"]
agent = ["uvicorn>=0.30", "starlette>=0.37"]
all = ["qirabot[browser,desktop,appium]"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# The vendored ADBKeyboard IME (GPL-2.0, see ADBKEYBOARD_LICENSE.txt) that the
# adb adapter installs on demand for non-ASCII text input.
"qirabot.assets" = ["*.apk", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "playwright: Playwright browser tests",
    "selenium: Selenium browser tests",
    "desktop: Desktop pyautogui tests",
    "appium: Appium mobile tests",
]

[tool.coverage.run]
source = ["qirabot"]

[tool.mypy]
python_version = "3.10"
strict = true

# The lint job installs the browser extra so the Playwright adapter + client get
# real type-checking. The other backends (desktop/mobile/selenium) stay out of
# CI — their stubs are poor/untyped and would only add noise — so their lazily
# imported modules are ignored here.
[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "appium.*",
    "pyautogui",
    "pyperclip",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
